Cambio pag. contacto, nosotros y productos

--- a/nosotros.html
+++ b/nosotros.html
@@ -88,16 +88,14 @@
             </div>
 
             <!-- Portfolio Grid Items-->
-            <div class="row justify-content-center align-items-center">
+            <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-2 mb-5 d-none d-lg-block imgNosotros">
                 </div>
                 <div class="col-md-6 col-lg-6 mb-5 textNosotros">
-                    <strong>25 años de experiencia</strong><br><br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus perspiciatis corporis inventore expedita, ipsam quis in? Odio iure voluptas officiis molestiae cumque nisi, quibusdam quae ipsum voluptatibus sint laborum libero!
-                        Necessitatibus illo recusandae fugit mollitia, dolores saepe natus quibusdam a at officia itaque debitis nobis? Ratione vel perferendis facere aperiam odio corporis quisquam illum, debitis a quidem, non maxime at. Magni minus facere
-                        tenetur! Ipsum numquam eveniet dolorem modi exercitationem, dolores voluptatem inventore consequatur nam facilis, tenetur nihil id accusantium ad nemo, laborum earum perferendis quaerat minus? Ullam, nemo fugit. Nulla eos harum
-                        itaque recusandae consequatur sed reiciendis ex possimus ad, exercitationem ipsum quidem dolor aliquam laboriosam eligendi ut porro accusantium? Quae explicabo obcaecati nesciunt. Fugiat obcaecati repudiandae quasi cupiditate!
-                        Quod animi dolorem in iure nemo! Nobis ullam unde repellat. Blanditiis temporibus qui ipsa possimus iusto dignissimos quaerat odit est, fugit vitae recusandae in pariatur ad, assumenda, odio beatae tempora.</p>
+                    <strong>Más de 11 años de experiencia nos respaldan</strong><br><br>
+                    <p>Somos una empresa 100% mexicana dedicados a ayudarte en la calibración, soporte, venta, etc. de instrumentos de presión, masa, flujo, densidad y temperatura. 
+                        Ofreciendo siempre una solución rápida y de calidad en todos y cada uno de nuestros trabajos; el servicio, calidad y precio es lo que nos distingue, nuestra satisfacción es ver que nuestros clientes se quedan y nos recomiendan.
+                        Gracias por confiar en nosotros y ser tu mejor opción, todo México calibra con SEMEC.</p>
                 </div>
             </div>
 
