--- a/productos.html
+++ b/productos.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="es">
 
 <head>
-
 
     <!-- <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,7 +9,8 @@
     <meta name="author" content="" />
     <title>SEMEC</title> -->
 
-    <title>Contacto | SEMEC Calibraciónes SA. de CV.</title>
+
+    <title>Productos | SEMEC Calibraciónes SA. de CV.</title>
     <meta name="description" content="Ponte en contacto con nosotros, TODO México calibra con SEMEC, más de 11 años de experiencia nos respaldan.">
     <meta name="author" content="SEMEC calibraciónes de México">
     <meta name="keywords" content="calibrar bascula, calibracion, calibracion de fuerza, calibracion de pesas, calibracion de temperatura, inspeccion de basculas" />
@@ -31,7 +31,6 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles2.css">
-
 </head>
 
 <body id="page-top">
@@ -73,106 +72,143 @@
         </div>
     </nav>
 
-    <!-- Contacto Section-->
-    <section class="masthead2 page-section portfolio text-center mb-5">
-        <div class="container contContacto">
-            <!-- Contacto Section Heading-->
+    <!-- Productos Section-->
+    <section class="masthead2 page-section portfolio mb-5" id="portfolio">
+        <div class="container">
+            <!-- Portfolio Section Heading-->
+            <h1 class="page-section-heading text-center text-uppercase text-secondary mb-0">Nuestros productos</h1>
 
-            <h1 class="page-section-heading text-center text-secondary text-uppercase mb-0">Contacto</h1>
             <!-- Icon Divider-->
             <div class="divider-custom">
-                <div class="divider-custom-line2"></div>
-                <img src="assets/img/contacto.gif" width="60rem" alt="gif" title="contacto">
-                <div class="divider-custom-line2"></div>
-            </div>
-            <br>
-
-            <!-- Contact Section Content-->
-            <div class="row justify-content-center align-items-center">
-                <h4 class="text-secondary"><b>LOCALÍZANOS EN</b></h4><br>
-
-                <div class="col-lg-5">
-                    <div class="colContact">
-                        <h6>Oficinas generales:</h6><br>
-                        <p class="lead">
-                            <div class="textContact">
-                                <p>
-                                    <b>Dirección: </b> Callejón de las flores No. 47 Bis Col. San Miguel Iztapalapa México D.F. C.P. 09360
-                                </p>
-                                <p><b>Tel: </b><span>(01 55) 4431 6477 ó 7160 7906</span><br><br></p>
-                            </div>
-                        </p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.279811041037!2d-99.0801174854708!3d19.35703328692733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fd932218ac75%3A0xac150a3063860827!2sCjon.%20de%20las%20flores%2047%2C%20San%20Miguel%2C%20Iztapalapa%2C%2009360%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1sen!2smx!4v1624648910309!5m2!1sen!2smx"
-                            width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto cdmx" title="contacto CDMX" />
-                    </div>
-                </div>
-
-                <div class="col-lg-5">
-                    <div class="colContact">
-                        <h6>Sucursal Aguascalientes:</h6><br>
-                        <p class="lead">
-                            <div class="textContact">
-
-                                <p>
-                                    <b>Dirección: </b> Calle Corregidora #602 Ste. Morelos 1 C.P. 20298 Aguascalientes, Ags.
-                                </p>
-
-                                <p><b>Tel: </b><span>(449) 377 73 14</span><br><br></p>
-                            </div>
-                        </p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3703.0222102548005!2d-102.2646407854233!3d21.85667898555578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429edf16e6ded1f%3A0xbcc3b42946da0f99!2sCorregidora%20602%2C%20Morelos%20I%2C%2020140%20Aguascalientes%2C%20Ags.!5e0!3m2!1sen!2smx!4v1624649308557!5m2!1sen!2smx"
-                            width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" title="contacto Aguascalientes" />
-                    </div>
-                </div>
-
-                <div class="col-lg-5">
-                    <div class="colContact">
-                        <h6>Sucursal San Luis Potosí</h6><br>
-                        <p class="lead">
-                            <div class="textContact">
-
-                                <p>
-                                    <b>Dirección: </b> Calle Av. Asia, 79526 San Luis, S.L.P.
-                                </p>
-
-                                <p><b>Tel: </b><span>(449) 377 73 14</span><br><br></p>
-                            </div>
-                        </p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12444.505392630837!2d-100.86569408677639!3d21.981656900161113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842abbda52089a1d%3A0x4fd3fcbef62bc353!2sAv.%20Asia%2C%20San%20Luis%20Potos%C3%AD!5e0!3m2!1ses-419!2smx!4v1627619664948!5m2!1ses-419!2smx"
-                            width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="colContact2">
-                        <img class="img-fluid" src="assets/img/contacto slp.jpg" alt="contacto SLP" title="Contacto SLP" />
-                    </div>
-                </div>
-
-                <div class="col-lg-10" style="margin-top: 2.5rem;">
-                    <h4 class="text-uppercase text-secondary"><b>Contactános a traves de nuestros emails</b></h4>
-                    <div class="colContact">
-                        <p>servicio@semec.mx</p>
-                        <p>ventas@semec.mx</p>
-                        <p>ventas-bajio@Semec.mx</p>
-                    </div>
-                </div>
+                <div class="divider-custom-line"></div>
+                <img src="assets/img/herramienta.gif" width="70rem" alt="herramienta" title="herramienta">
+                <div class="divider-custom-line"></div>
             </div>
 
+
+            <!-- Productos Grid Items-->
+            <div class="row justify-content-center">
+
+                <!-- Productos Item 1 -->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <div class="producto-item">
+
+                                <div class="caption">
+                                    <div class="caption-content">
+                                        <h5 class="text-center mb-0 text-white">Vendemos gran variedad de basculas y balanzas de laboratorio, comerciales e industriales. <br><br> Además ofrecemos la instalación y diseños, para aplicaciones especiales.</h5>
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/instalacion.png" style="height: 40rem;" alt="instalación" title="instalación" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Productos Item 2-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/img/portfolio/balanzasAnaliticas.PNG" alt="Card image cap">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">Balanzas Analíticas</h5>
+                                    <p class="card-text">Contamos con gran variedad de marcas reconocidas en el mercado. Brindamos asesoría previa para ayudarle a elegir el instrumento mas adecuado para sus necesidades. </p>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 3-->
+                <div class="col-md-6 col-lg-4 mb-5">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="celda descarga" title="Celda descarga">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">Celdas de carga</h5>
+                                    <p class="card-text">Contamos con todo tipo de celdas de carga (para balanzas, basculas, plataformas, tanques, tolvas y para aplicaciones especiales).</p>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono2" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 4-->
+                <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/img/portfolio/indicadoresdepeso.PNG" alt="indicadores de peso" title="indicadores de peso">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">Indicadores de peso</h5>
+                                    <p class="card-text">Tenemos el Indicador adecuado a sus necesidades y economía material de plástico y Acero inoxidable. Manejamos marcas comerciales y reconocidas como: Mettler Toledo, Weigh-Tronix, GSE, Ohaus, Rice Lake y AND, entre otros.</p>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 5-->
+                <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/img/portfolio/basculas.PNG" alt="basculas" title="basculas">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">Básculas</h5>
+                                    <p class="card-text">Contamos con gran variedad de básculas Mecánicas y Digitales para de uso comercial e industrial.</p>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 6-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto">
+                        <div class="card">
+                            <img class="card-img-top" src="assets/img/portfolio/valvulas.PNG" alt="valvulas" title="valvulas">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">Válvulas de seguridad</h5>
+                                    <p class="card-text">Venta, mantenimiento, ajuste de presión y calibración de válvulas de seguridad en material de bronce y acero inoxidable.</p>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono1.svg" alt="icono" title="icono"><br> Seguridad</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono2.svg" alt="icono" title="icono"><br>El mejor precio</div>
+                                    <div class="p-2 text-center contSellos"><img class="sellos" src="assets/img/portfolio/icono3.svg" alt="icono" title="icono"><br>A tiempo</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-
-
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container">
@@ -226,6 +262,7 @@
             <small>SEMEC CALIBRACIONES S.A de C.V. ® <br>Todos los derechos reservados.</small>
         </div>
     </div>
+
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
