--- a/certificaciones.html
+++ b/certificaciones.html
@@ -125,8 +125,8 @@
                             <a class="cert-item" href="#!">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <div class="h2">Acreditación MSP M-81</div>
-                                        <p class="mb-0">Requisitos generales para la competencia de los laboratorios y calabración para el área de Masa.</p>
+                                        <div class="h2">UVIM 208</div>
+                                        <!-- <p class="mb-0">Requisitos generales para la competencia de los laboratorios y calabración para el área de Masa.</p> -->
                                     </div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="Acreditación 1" title="Acreditación 1" />
@@ -137,8 +137,8 @@
                             <a class="cert-item" href="#!">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <div class="h2">DIPLOMA DE PRESIÓN</div>
-                                        <p class="mb-0">Requisitos generales para la competencia de laboratorios de ensayo y de calibración para el área de Presión.</p>
+                                        <div class="h2">P-153</div>
+                                        <!-- <p class="mb-0">Requisitos generales para la competencia de laboratorios de ensayo y de calibración para el área de Presión.</p> -->
                                     </div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="Acreditación 2" title="Acreditación 2" />
@@ -149,8 +149,8 @@
                             <a class="cert-item" href="#!">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <div class="h2">ACREDITACIÓN FL-04</div>
-                                        <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área Flujo.</p>
+                                        <div class="h2">FL-04</div>
+                                        <!-- <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área Flujo.</p> -->
                                     </div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="Acreditación 3" title="Acreditación 3" />
@@ -160,11 +160,23 @@
                             <a class="cert-item" href="#!">
                                 <div class="caption">
                                     <div class="caption-content">
-                                        <div class="h2">ACREDITACIÓN IBSEI ACT-1 Temperatura</div>
-                                        <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área de Temperatura.</p>
+                                        <div class="h2">T-114</div>
+                                        <!-- <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área de Temperatura.</p> -->
                                     </div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="Acreditación 4" title="Acreditación 4" />
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <a class="cert-item" href="#!">
+                                <div class="caption">
+                                    <div class="caption-content">
+                                        <div class="h2">D-34</div>
+                                        <!-- <p class="mb-0">Laboratorio de Calibración para las actividades de evaluación de la conformidad en el área de Temperatura.</p> -->
+                                    </div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio-5.jpg" alt="Acreditación 5" title="Acreditación 5" />
                             </a>
                         </div>
                     </div>
