Modificacion otros productos

--- a/index.html
+++ b/index.html
@@ -241,30 +241,30 @@
 
                         <div class="row justify-content-center align-items-center">
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-4">
-                                    <img src="assets/img/otros1.PNG" style="width: 100%;" alt="otros productos" title="otros productos">
+                                <div class="col-md-4">
+                                    <img class="imgotros" src="assets/img/otros1.PNG" alt="otros productos" title="otros productos">
                                 </div>
-                                <div class="col-8 textOtros">
+                                <div class="col-md-8 textOtros">
                                     <p class="masthead-subheading2 mb-0">Para el área de la construcción, además de la calibración de tolvas, ofrecemos venta y calibración de basculas; portátiles, de plataforma, balanzas y basculas camioneras.</p>
                                 </div>
                             </div>
                             <div class="w-100"></div><br>
 
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-4">
-                                    <img src="assets/img/otros2.PNG" style="width: 100%;" alt="otros productos" title="otros productos">
+                                <div class="col-md-4">
+                                    <img class="imgotros" src="assets/img/otros2.PNG" alt="otros productos" title="otros productos">
                                 </div>
-                                <div class="col-8 textOtros">
+                                <div class="col-md-8 textOtros">
                                     <p class="masthead-subheading2 mb-0"> Contamos con Servicio Preventivo y Correctivo para los instrumentos antes de su calibración.</p>
                                 </div>
                             </div>
                             <div class="w-100"></div><br>
 
                             <div class="row justify-content-center align-items-center">
-                                <div class="col-4">
-                                    <img src="assets/img/otros3.PNG" style="width: 100%; height: 13rem;" alt="otros productos" title="otros prodcutos">
+                                <div class="col-md-4">
+                                    <img class="imgotros" src="assets/img/otros3x.png" alt="otros productos" title="otros prodcutos">
                                 </div>
-                                <div class="col-8 textOtros">
+                                <div class="col-md-8 textOtros">
                                     <p class="masthead-subheading2 mb-0"> Contamos con venta y calibración de Prensas, acreditados ante <b>EMA</b>.</p>
                                 </div>
                             </div>
