--- a/nosotros.html
+++ b/nosotros.html
@@ -93,10 +93,16 @@
                 </div>
                 <div class="col-md-6 col-lg-6 mb-5 textNosotros">
                     <strong>Más de 11 años de experiencia nos respaldan</strong><br><br>
-                    <p>Somos una empresa 100% mexicana dedicados a ayudarte en la calibración, soporte, venta, etc. de instrumentos de presión, masa, flujo, densidad y temperatura. 
-                        Ofreciendo siempre una solución rápida y de calidad en todos y cada uno de nuestros trabajos; el servicio, calidad y precio es lo que nos distingue, nuestra satisfacción es ver que nuestros clientes se quedan y nos recomiendan.
-                        Gracias por confiar en nosotros y ser tu mejor opción, todo México calibra con SEMEC.</p>
+                    <p>Somos una empresa 100% mexicana dedicados a ayudarte en la calibración, soporte, venta, etc. de instrumentos de presión, masa, flujo, densidad y temperatura. Ofreciendo siempre una solución rápida y de calidad en todos y cada uno de
+                        nuestros trabajos; el servicio, calidad y precio es lo que nos distingue, nuestra satisfacción es ver que nuestros clientes se quedan y nos recomiendan. <br><br> Gracias por confiar en nosotros y ser tu mejor opción, todo México
+                        calibra con SEMEC.</p>
+
+                    <p>
+                        <b>Dirección: <br> </b> Callejón de las flores No. 47 Bis Col. San Miguel Iztapalapa México D.F. C.P. 09360
+                    </p>
+                    <p><b>Tel: </b><span>(01 55) 4431 6477 ó 7160 7906</span><br><br></p>
                 </div>
+
             </div>
 
         </div>
