--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
                         </div>
                     </div>
                 </div>
-            </div><br><br>
+            </div>
             <div class="d-flex justify-content-center">
-                <a href="productos.html" class="btn Btnvertodos btn-xl2" style="margin-right: 10px;">Ver todos</a>
+                <a href="productos.html" class="btn Btnvertodos btn-xl2">Ver todos</a>
             </div>
         </div>
     </section>
