Modificacion Btn ver mas

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
 
             <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
-            <br><a class="btn Btnvertodos btn-xl" href="certificaciones.html">Ver más</a>
+            <a class="btn Btnvermas btn-xl" href="certificaciones.html">Ver más</a>
 
         </div>
     </section>
