--- a/nosotros.html
+++ b/nosotros.html
@@ -95,8 +95,10 @@
                     <strong>Más de 11 años de experiencia nos respaldan</strong><br><br>
                     <p>Somos una empresa 100% mexicana dedicados a ayudarte en la calibración, soporte, venta, etc. de instrumentos de presión, masa, flujo, densidad y temperatura. Ofreciendo siempre una solución rápida y de calidad en todos y cada uno de
                         nuestros trabajos; el servicio, calidad y precio es lo que nos distingue, nuestra satisfacción es ver que nuestros clientes se quedan y nos recomiendan. <br><br> Gracias por confiar en nosotros y ser tu mejor opción, todo México
-                        calibra con SEMEC.</p>
+                        calibra con SEMEC.
+                    </p>
 
+                    <br>
                     <p>
                         <b>Dirección: <br> </b> Callejón de las flores No. 47 Bis Col. San Miguel Iztapalapa México D.F. C.P. 09360
                     </p>
